# portainer-agent

./: .bumpversion.cfg  .pre-commit-config.yaml  AGENTS.md  Dockerfile  MANIFEST.in  README.md  compose.yml  debug.Dockerfile  pyproject.toml
portainer_agent/: __init__.py  agent.py  auth.py  mcp.py  portainer_api.py
portainer_agent/agent/: CRON.md  CRON_LOG.md  HEARTBEAT.md  IDENTITY.md
portainer_agent/skills/portainer-agent-docs/: SKILL.md
portainer_agent/skills/portainer-agent-docs/reference/: admin_registries_browse.md  admin_user_roles.md  contribute_contribute.md  whats-new.md
portainer_agent/skills/portainer-agent-docs/reference/index/: PortainerEE-API-2.39.0.md  index.md  toc.md
portainer_agent/skills/portainer-agent-docs/reference/versions_ee_2.39.0.yaml/: toc.md  versions_ee_2.39.0.yaml_pt1.md  versions_ee_2.39.0.yaml_pt10.md  versions_ee_2.39.0.yaml_pt11.md  versions_ee_2.39.0.yaml_pt12.md  versions_ee_2.39.0.yaml_pt13.md  versions_ee_2.39.0.yaml_pt14.md  versions_ee_2.39.0.yaml_pt15.md  versions_ee_2.39.0.yaml_pt16.md  versions_ee_2.39.0.yaml_pt17.md  versions_ee_2.39.0.yaml_pt18.md  versions_ee_2.39.0.yaml_pt19.md  versions_ee_2.39.0.yaml_pt2.md  versions_ee_2.39.0.yaml_pt20.md  versions_ee_2.39.0.yaml_pt21.md  versions_ee_2.39.0.yaml_pt22.md  versions_ee_2.39.0.yaml_pt23.md  versions_ee_2.39.0.yaml_pt24.md  versions_ee_2.39.0.yaml_pt25.md  versions_ee_2.39.0.yaml_pt26.md  versions_ee_2.39.0.yaml_pt27.md  versions_ee_2.39.0.yaml_pt28.md  versions_ee_2.39.0.yaml_pt29.md  versions_ee_2.39.0.yaml_pt3.md  versions_ee_2.39.0.yaml_pt30.md  (+8 more)
(+204 files in other folders)
