[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portainer-agent"
version = "0.1.6"
description = "Portainer container management — Docker environments, stacks, Kubernetes clusters, registries, users, and edge devices."
readme = "README.md"
authors = [{ name = "Audel Rouhi", email = "knucklessg1@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3"]
requires-python = ">=3.10"
dependencies = [
    "agent-utilities[mcp]>=0.2.18"]

[project.optional-dependencies]
agent = [
    "agent-utilities[agent,logfire]>=0.2.18"]


all = [
    "agent-utilities[mcp,agent,logfire]>=0.2.18"]

[project.scripts]
portainer-mcp = "portainer_agent.mcp:mcp_server"
portainer-agent = "portainer_agent.agent:agent_server"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
portainer_agent = [ "mcp_config.json", "agent/**", "skills/**"]
